tests/sqlite/ui-common/section_in_sql_missing_map.stderr
error: sql_forge!: section {#filter} has no mapping
 --> tests/sqlite/tmp-ui/section_in_sql_missing_map.rs:9:9
  |
9 |         "SELECT id, name FROM users {#filter}",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
